--- a/src/components/projectcards/projectcards.styles.scss
+++ b/src/components/projectcards/projectcards.styles.scss
@@ -17,6 +17,7 @@
     padding: 1.2rem 1rem;
     img{
         width: 100%;
+        min-height: 350px;
     }
 }
 
@@ -29,7 +30,6 @@
     p{
         padding-bottom: 1rem;
         font-size: 1.1rem;
-        text-align: justify;
     }
 }
 
