--- a/src/components/aboutcontent/AboutContent.styles.scss
+++ b/src/components/aboutcontent/AboutContent.styles.scss
@@ -15,6 +15,9 @@
             line-height: 2;
             margin: 1.2rem 0;
         }
+        .btn{
+            margin-bottom: 1rem;
+        }
     }
 
 }
@@ -44,4 +47,8 @@
         grid-row: 1;
         z-index: 5;
     }
+}
+h2{
+    margin-top: 1rem;
+    color: #fff;
 }
